--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@ a:focus {
 .slider_section .img-box img {
   min-width: 100%;
   min-height: 100%;
+  width: 100vw;
 }
 
 .slider_section .img-box::before {
